# sh_fit

./: BRDF.h  CMakeLists.txt  Numpy.h  README.md  SphericalFunction.h  SphericalHarmonics.cpp  SphericalHarmonics.h  Test.cpp  Test.h  ThreadPool.cpp  ThreadPool.h  Util.h  cos_mat.npy  cos_mat_frostbite.npy  main.cpp
SphericalFunctions/: BRDF.cpp  BRDF.h  ClampedCosine.cpp  ClampedCosine.h  GGX_BRDF.cpp  GGX_BRDF.h  LTSF.cpp  LTSF.h  SphericalFunction.h  SphericalHarmonics.cpp  SphericalHarmonics.h
plotting/: Plotter.cpp  Plotter.h
